Changed some equivalence stuff, poor MPI implement

--- a/non-compressions/Makefile
+++ b/non-compressions/Makefile
@@ -2,7 +2,7 @@
 
 DIR = ../
 CC = g++
-all: golay.o fourier.o equivalence.o array.o generate_classes filter_equivalent match_pairs
+all: golay.o fourier.o equivalence.o array.o generate_classes generate_classesMPI filter_equivalent match_pairs
 
 equivalence.o: $(DIR)equivalence.cpp $(DIR)golay.h $(DIR)coprimes.h
 	$(CC) -Wall -g -c $(DIR)equivalence.cpp -o $(DIR)equivalence.o
@@ -22,10 +22,13 @@ match_pairs: match_pairs.cpp $(DIR)golay.h $(DIR)golay.o
 generate_classes: generate_classes.cpp $(DIR)golay.h $(DIR)array.o $(DIR)fourier.o $(DIR)equivalence.o
 	$(CC) -Wall -g -O3 generate_classes.cpp $(DIR)equivalence.o $(DIR)array.o $(DIR)fourier.o -o generate_classes -fopenmp -L../fftw-3.3.10 -l:libfftw3.a -l:libfftw3_omp.a -lm
 
+generate_classesMPI: generate_classesMPI.cpp $(DIR)golay.h $(DIR)array.o $(DIR)fourier.o $(DIR)equivalence.o
+	mpic++ -Wall -g -O3 generate_classesMPI.cpp $(DIR)equivalence.o $(DIR)array.o $(DIR)fourier.o -o generate_classesMPI -fopenmp -L../fftw-3.3.10 -l:libfftw3.a -l:libfftw3_omp.a -lm
+
 filter_equivalent: filter_equivalent.cpp $(DIR)golay.h $(DIR)equivalence.o
 	$(CC) -Wall -g -O3 filter_equivalent.cpp $(DIR)equivalence.o -o filter_equivalent
 
 
 clean:
 	@echo "Cleaning up..."
-	rm -f $(DIR)equivalence.o $(DIR)array.o $(DIR)fourier.o $(DIR)golay.o generate_classes filter_equivalent match_pairs
+	rm -f $(DIR)equivalence.o $(DIR)array.o $(DIR)fourier.o $(DIR)golay.o generate_classes generate_classesMPI filter_equivalent match_pairs
