--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -61,7 +61,15 @@
     "xtr1common": "cpp",
     "*.tcc": "cpp",
     "memory_resource": "cpp",
-    "unordered_set": "cpp"
+    "unordered_set": "cpp",
+    "complex": "cpp",
+    "map": "cpp",
+    "fstream": "cpp",
+    "iostream": "cpp",
+    "istream": "cpp",
+    "sstream": "cpp",
+    "cfenv": "cpp",
+    "cinttypes": "cpp"
   },
   "C_Cpp_Runner.cCompilerPath": "gcc",
   "C_Cpp_Runner.cppCompilerPath": "g++",
