--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,10 @@
-cmake_minimum_required(VERSION 3.10)
+cmake_minimum_required(VERSION 3.16)
 project(GolayPair)
 
 set(CMAKE_CXX_STANDARD 20)
 
 if(CMAKE_BUILD_TYPE STREQUAL "Debug")
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Werror -g")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Werror -g -O3")
 elseif(CMAKE_BUILD_TYPE STREQUAL "Release")
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -O3")
 endif()
@@ -36,4 +36,3 @@ target_link_libraries(golay_lib ${FFTW3_LIB} m)
 # Main executable
 add_executable(main src/main.cpp src/generate_hybrid.cpp src/match_pairs.cpp src/sort.cpp src/uncompression.cpp src/filter.cpp)
 target_link_libraries(main golay_lib)
-target_precompile_headers(main PRIVATE ${CMAKE_SOURCE_DIR}/include/CLI11.hpp)
