Removed MPI dependency

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,9 +9,6 @@ elseif(CMAKE_BUILD_TYPE STREQUAL "Release")
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -O3")
 endif()
 
-# Find MPI
-find_package(MPI REQUIRED)
-
 # Find FFTW3 library
 find_library(FFTW3_LIB fftw3 HINTS /usr/local/lib)
 find_path(FFTW3_INCLUDE fftw3.h HINTS /usr/local/include)
@@ -48,4 +45,4 @@ target_link_libraries(golay_lib ${FFTW3_LIB} m)
 
 # Main executable
 add_executable(main src/main.cpp src/generate_hybrid.cpp src/match_pairs.cpp src/sort.cpp src/uncompression.cpp src/filter.cpp src/lyndon.cpp)
-target_link_libraries(main golay_lib MPI::MPI_CXX)
+target_link_libraries(main golay_lib)
